i began to change invocations params, but it doesn`t work with var keyword for now.